--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,12 +8,14 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    container:
-      image: node:20
     steps:
       - uses: actions/checkout@v3
+
+      - uses: actions/setup-node@v3
         with:
           node-version: 20
+          cache: "npm"
+
       - run: npm ci
       - run: npm test
       - run: npm run build
